Add skelton editor

--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,24 +1,7 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-top: 10vh;
-    margin: 0;
-    text-align: center;
-}
-
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: 0.75s;
-}
-
-.logo.tauri:hover {
-    filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
-    display: flex;
-    justify-content: center;
+html,
+body {
+    box-sizing: content-box;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
